# MyOpenGLApp

./: CMakeLists.txt  README.md
src/: glad.c  main.cpp
